use spark-submit to merge the parquet files